# linka

./: .gitignore  Cargo.toml  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  README.md  docker-compose.simple.yml  docker-compose.yml  env.template  linka_docs_sync.patch  package-lock.json  package.json  setup.sh  vercel.json
.cursor/: AGENTS.md
.cursor/rules/: rule.mdc
apps/: README.md
apps/backend/: env.example  package.json  tsconfig.json
apps/backend/scripts/: seedVendors.ts
apps/backend/src/: index.ts
apps/contracts/: deployed-addresses.json  env.example  hardhat.config.ts  package-lock.json  package.json
apps/frontend/: .dockerignore  minikit.config.ts  package.json
apps/mini-app/: DEPLOYMENT.md  next.config.js  package.json  tailwind.config.ts
contracts/: hardhat.config.ts  package-lock.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/core/: EscrowManager.sol  PaymentProcessor.sol  ReputationRegistry.sol
contracts/governance/: DisputeResolution.sol
contracts/test/: LinkaProtocol.test.ts
contracts/typechain-types/: hardhat.d.ts
docs/: ANONYMOUS_FIRST_UPDATES.md  ARCHITECTURE.md  BRAND.md  BUSINESS_PRD.md  ONBOARDING.md  PITCH.md  PRD.md
docs/assets/: architecture-overview.md  security-flow.md  system-flow.md  system-flow.mmd  user-journey.md
libs/: README.md
libs/ai_core/: Cargo.toml
libs/db_core/: Cargo.toml
libs/messaging_core/: Cargo.toml
libs/ramp_core/: Cargo.toml
libs/wallet_core/: Cargo.toml
linka-adapter/: Dockerfile  package.json
linka-adapter/src/: index.ts
linka-core/: Cargo.toml  Dockerfile
linka-core/src/: lib.rs
scripts/: deploy-all.sh  mongo-init.js
services/: README.md
services/bread-proxy/: Dockerfile  package.json
services/vendor-service/: Cargo.toml
services/wallet-core/: Cargo.toml  Dockerfile
services/wallet-core/src/: main.rs
(+97 files in other folders)
