[workspace]
resolver = "2"
members = [
    "services/wallet-core",
    "services/vendor-service",
    "libs/ai_core",
    "libs/wallet_core",
    "libs/messaging_core",
    "libs/db_core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Linka Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
