[package]
name = "linka-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.0"
redis = { version = "0.24", features = ["tokio-comp"] }
warp = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.ramp_core]
path = "../libs/ramp_core"
