[package]
name = "wallet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
mongodb.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

wallet_core = { path = "../../libs/wallet_core" }
messaging_core = { path = "../../libs/messaging_core" }
db_core = { path = "../../libs/db_core" }

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
